tests/rosetta/out/C/character-codes-4.error
cc: exit status 1
/tmp/character-codes-4.c: In function ‘_mochi_main’:
/tmp/character-codes-4.c:23:26: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   23 |   printf("%s\n", chr(97) + " " + chr(960));
      |                  ~~~~~~~ ^
      |                  |       |
      |                  char *  char *
/tmp/character-codes-4.c:24:25: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
   24 |   printf("%s\n", chr(b) + " " + chr(r));
      |                  ~~~~~~ ^
      |                  |      |
      |                  char * char *
